--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,11 @@ spring:
       hibernate:
         format_sql: true
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   mvc:
     pathmatch:
       matching-strategy: ant-path-matcher
@@ -25,3 +30,13 @@ jwt:
 server:
   servlet:
     context-path: /api
+
+cloud:
+  aws:
+    credentials:
+      accessKey: {ACCESS_KEY}
+      secretKey: {SECRET_KEY}
+    s3:
+      bucket: {BUCKET_NAME}
+    region:
+      static: {REGION}
